--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'org.apache.commons:commons-math3:3.5'
     compile 'com.estimote:sdk:0.9.7@aar'
     compile files('libs/Trilateration-1.0.0.jar')
+    compile 'org.zeromq:jeromq:0.3.5'
 }
